src/objects/Case.object
<CustomObject>
    <businessProcesses>
        <fullName>Case Support Process</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>In Progress</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Pending - action</fullName>
        </values>
        <values>
            <fullName>Pending - awaiting customer info</fullName>
        </values>
        <values>
            <fullName>Pending - escalated</fullName>
        </values>
        <values>
            <fullName>Pending - solution sent</fullName>
        </values>
        <values>
            <fullName>Reopened</fullName>
        </values>
        <values>
            <fullName>Updated by customer</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Closed Case Support Process</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Reopened</fullName>
            <default>true</default>
        </values>
    </businessProcesses>
    <fields>
        <fullName>Browser__c</fullName>
        <label>Browser</label>
        <picklist>
            <picklistValues>
                <fullName>Internet Explorer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Firefox</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chrome</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Safari</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Case_Age_In_Business_Hours__c</fullName>
        <description>The total case age in business hours from open to close.</description>
        <inlineHelpText>The total case age in business hours from open to close.</inlineHelpText>
        <label>Case Age In Business Hours</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Case_Age__c</fullName>
        <formula>TEXT( FLOOR(  Case_Age_in_Days__c ) ) &amp; &quot; days &quot;
  &amp; TEXT( FLOOR( MOD(  Case_Age_in_Days__c * 24, 24 ) ) ) &amp; &quot; hours &quot;
  &amp; TEXT( ROUND( MOD(  Case_Age_in_Days__c  * 24 * 60, 60 ), 0 ) ) &amp; &quot; minutes&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Age</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Age_in_Days__c</fullName>
        <formula>Case_Age_In_Business_Hours__c  / 24</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Age in Days</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Case_Close_Reason__c</fullName>
        <label>Case Close Reason</label>
        <picklist>
            <picklistValues>
                <fullName>Resolved by advisor</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Resolved by dev fix</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Duplicate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Incorrectly raised</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Insufficient info</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No customer response</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Internal testing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Case_Origin_Image__c</fullName>
        <description>Displays an image based of the case origin picklist value selected</description>
        <formula>IMAGE(
        CASE(  Origin , &quot;Email&quot;, &quot;img/icon/mail24.png&quot;, 
                        &quot;Web Form&quot;, &quot;img/icon/form24.png&quot;, 
                        &quot;Live Chat&quot;, &quot;img/icon/people24.png&quot;, 
                        &quot;Community&quot;, &quot;img/icon/custom51_100/globe24.png&quot;,
                        &quot;Social&quot;, &quot;img/icon/custom51_100/whistle24.png&quot;,
                        &quot;/s.gif&quot;
             ), &quot;error&quot;
       )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Origin</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <picklist>
            <picklistValues>
                <fullName>Getting started</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manage your account</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Using the service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Technical issues</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Billing, vouchers and promotions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Invalid Case</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Complaint__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Complaint</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Create_new_case_email__c</fullName>
        <defaultValue>false</defaultValue>
        <description>this field is use to trigger an email notification to the contact if the case is outside of the reopening period</description>
        <label>Create new case email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DateDiff__c</fullName>
        <formula>(First_Response_Sent_DateTime__c-First_Response_Due__c)*24*60</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DateDiff</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Device__c</fullName>
        <label>Device</label>
        <picklist>
            <picklistValues>
                <fullName>iOS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Android</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MAC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Draft_Article_ID__c</fullName>
        <label>Draft Article ID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Error_Code__c</fullName>
        <label>Error Code</label>
        <picklist>
            <picklistValues>
                <fullName>00000000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>00000001</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>00000010</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>00000011</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>00000100</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>First_Response_Due__c</fullName>
        <formula>CreatedDate +  1/(24/ First_Response_SLA_Hours__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>First Response Due</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>First_Response_Duetime__c</fullName>
        <label>First Response Due</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>First_Response_SLA_Hours__c</fullName>
        <description>Number of hours by which first response email needs to be sent</description>
        <label>First Response SLA (Hours)</label>
        <precision>6</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>First_Response_Sent_DateTime__c</fullName>
        <description>Date/time when first email sent to customer</description>
        <label>First Response Sent Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>First_Response_Sent__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Captures when agent sends first email to customer</description>
        <label>First Response Sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_Status_Change__c</fullName>
        <description>Stores the last time the status changed -- used by the Case Business Hours Tools package.</description>
        <label>Last Status Change</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>OS__c</fullName>
        <inlineHelpText>Operating System</inlineHelpText>
        <label>OS</label>
        <picklist>
            <controllingField>Device__c</controllingField>
            <picklistValues>
                <fullName>Windows 8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Windows 7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Windows Vista</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OS X Yosemite</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OS X Mavericks</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OS X Mountain Lion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>iOS 8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>iOS 7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OS X Lion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lollipop</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KitKat</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jelly Bean</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Windows XP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Windows 8.1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OS X Snow Leopard</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Open_Actions__c</fullName>
        <label>Open Actions</label>
        <summaryFilterItems>
            <field>Action__c.Status__c</field>
            <operation>notEqual</operation>
            <value>Completed</value>
        </summaryFilterItems>
        <summaryForeignKey>Action__c.Case__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Other_Error_Code__c</fullName>
        <label>Other Error Code</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Other_device_description__c</fullName>
        <label>Other device description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Overdue_Action_Count__c</fullName>
        <description>Counts the amount of action related to a case with the overdue checkbox checked</description>
        <label>Overdue Action Count</label>
        <summaryFilterItems>
            <field>Action__c.Overdue__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Action__c.Status__c</field>
            <operation>notEqual</operation>
            <value>Completed</value>
        </summaryFilterItems>
        <summaryForeignKey>Action__c.Case__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Overdue_Actions__c</fullName>
        <formula>IF ( 
 Overdue_Action_Count__c  &gt; 0, 
IMAGE (&quot;/img/msg_icons/error24.png&quot;, &quot;Overdue&quot;), 
IMAGE (&quot;/img/msg_icons/confirm24.png&quot;, &quot;On time&quot;) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Overdue Actions</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Query_Topic__c</fullName>
        <label>Query Topic</label>
        <picklist>
            <controllingField>Sub_Category__c</controllingField>
            <picklistValues>
                <fullName>Abandoned Chat</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Junk email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Duplicate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Test</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Created in error</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Re_open_limit__c</fullName>
        <formula>ClosedDate +  $Setup.Caselimit__c.Case_Reopen_limit__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Re-open limit</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Reopen_Reason__c</fullName>
        <label>Reopen Reason</label>
        <picklist>
            <picklistValues>
                <fullName>Bounceback</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed in error</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Thank you email / Autoreply</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unhappy with resolution</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New issue</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SLA_Status_Icon__c</fullName>
        <formula>IF (OR(SLA_Status__c = &quot;OK - sent before due&quot;,SLA_Status__c = &quot;OK - date not passed&quot;), IMAGE (&quot;/img/msg_icons/confirm24.png&quot;, &quot;OK&quot;),
IF (SLA_Status__c = &quot;WARNING - SLA Near&quot;, IMAGE (&quot;/img/msg_icons/warning24.png&quot;, &quot;Warning&quot;),
IMAGE (&quot;/img/msg_icons/error24.png&quot;, &quot;Violated&quot;)
)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SLA Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SLA_Status__c</fullName>
        <formula>IF(

First_Response_Sent_DateTime__c &lt; First_Response_Due__c , &quot;OK - sent before due&quot;,
   
IF(AND(TimeTillSLA__c &gt; 20,First_Response_Sent__c = false) , &quot;OK - date not passed&quot;, 

IF(AND(AND(TimeTillSLA__c &gt;0, TimeTillSLA__c &lt;= 20), First_Response_Sent__c = false), &quot;WARNING - SLA Near&quot;, 

IF(AND(TimeTillSLA__c &lt; 0, First_Response_Sent__c = false), &quot;Violated - not sent&quot;,

IF(First_Response_Sent_DateTime__c &gt; First_Response_Due__c, &quot;Violated - sent after due&quot;, 
  
&quot;UNKNOWN&quot;)))))</formula>
        <label>SLA Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sub_Category__c</fullName>
        <label>Sub-Category</label>
        <picklist>
            <controllingField>Category__c</controllingField>
            <picklistValues>
                <fullName>About BBC Store</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Signing up</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>My Programmes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manage your details</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Refunds</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Forgotten email address, password, or PIN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>About BBC iD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Managing devices</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Close Store account</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Account is locked</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reporting suspicious activity/stolen devices</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Purchase history</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Billing issues</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Content has disappeared from My Programmes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Buying content</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Watching</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rating and reviewing content</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contacting us</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cookies</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mac</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>iOS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Android</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Streaming quality</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Supported browsers/OS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>My device is not supported</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>iPlayer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>What happens if iplayer is down?</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shop</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Continuous loading</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Thread_ID__c</fullName>
        <formula>&apos;ref:_&apos; &amp; LEFT($Organization.Id, 4) &amp;  MID($Organization.Id,10,6) &amp; &apos;._&apos; &amp; LEFT( Id, 4) &amp;  MID(Id,10,6) &amp; &apos;:ref&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Thread ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TimeTillSLA__c</fullName>
        <formula>( First_Response_Duetime__c -NOW())*24*60</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TimeTillSLA</label>
        <precision>18</precision>
        <scale>18</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Time_With_BBC_in_days__c</fullName>
        <formula>Time_With_Support__c  / 24</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Time With BBC in days</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Time_With_Customer__c</fullName>
        <defaultValue>0</defaultValue>
        <description>The time in business hours that this case spent in the hands of the customer.</description>
        <inlineHelpText>The time in business hours that this case spent in the hands of the customer.</inlineHelpText>
        <label>Time With Customer</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Time_With_Customer_in_Days__c</fullName>
        <formula>Time_With_Customer__c   / 24</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Time With Customer in Days</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Time_With_Support__c</fullName>
        <defaultValue>0</defaultValue>
        <description>The time in business hours that this case spent with support.</description>
        <inlineHelpText>The time in business hours that this case spent with support.</inlineHelpText>
        <label>Time With Support</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Time_with_BBC_text__c</fullName>
        <formula>TEXT( FLOOR( Time_With_BBC_in_days__c ) ) &amp; &quot; days &quot;
&amp; TEXT( FLOOR( MOD( Time_With_BBC_in_days__c * 24, 24 ) ) ) &amp; &quot; hours &quot;
&amp; TEXT( ROUND( MOD(  Time_With_BBC_in_days__c * 24 * 60, 60 ), 0 ) ) &amp; &quot; minutes&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Time with BBC</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Time_with_Customer_text__c</fullName>
        <formula>TEXT( FLOOR(  Time_With_Customer_in_Days__c  ) ) &amp; &quot; days &quot;
&amp; TEXT( FLOOR( MOD(  Time_With_Customer_in_Days__c  * 24, 24 ) ) ) &amp; &quot; hours &quot;
&amp; TEXT( ROUND( MOD(  Time_With_Customer_in_Days__c  * 24 * 60, 60 ), 0 ) ) &amp; &quot; minutes&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Time with Customer</label>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>Account_Management_Case</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>Category__c</columns>
        <columns>Sub_Category__c</columns>
        <columns>CASES.ORIGIN</columns>
        <filterScope>Queue</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>_Account Management</label>
        <queue>Account_Management</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>AllClosedCases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CASES.CLOSED_DATE</columns>
        <columns>Category__c</columns>
        <columns>Sub_Category__c</columns>
        <columns>CASES.ORIGIN</columns>
        <columns>OWNER_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All Closed Cases</label>
        <sharedTo>
            <role>BBC_Management</role>
            <role>Contact_Centre_Management</role>
            <role>Global</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>AllOpenCases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>Category__c</columns>
        <columns>Sub_Category__c</columns>
        <columns>CASES.ORIGIN</columns>
        <columns>OWNER_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>All Open Cases</label>
        <sharedTo>
            <role>BBC_Management</role>
            <role>Contact_Centre_Management</role>
            <role>Global</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Cases_Approaching_SLA</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>OWNER_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>SLA_Status_Icon__c</field>
            <operation>equals</operation>
            <value>WARNING - SLA Near</value>
        </filters>
        <label>Cases Approaching SLA</label>
    </listViews>
    <listViews>
        <fullName>Cases_with_Missed_SLA</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>OWNER_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>SLA_Status__c</field>
            <operation>equals</operation>
            <value>Violated - not sent</value>
        </filters>
        <label>Cases with Missed SLA</label>
    </listViews>
    <listViews>
        <fullName>Incorrectly_raised_cases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>Category__c</columns>
        <columns>Sub_Category__c</columns>
        <columns>CASES.ORIGIN</columns>
        <filterScope>Queue</filterScope>
        <filters>
            <field>CASES.ORIGIN</field>
            <operation>equals</operation>
            <value>Email</value>
        </filters>
        <label>Incorrectly raised cases</label>
        <queue>Incorrectly_raised</queue>
        <sharedTo>
            <role>BBC_Management</role>
            <role>Contact_Centre_Management</role>
            <role>Global</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>MyOpenCases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>Category__c</columns>
        <columns>Sub_Category__c</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CASES.LAST_UPDATE</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>My Open Cases</label>
    </listViews>
    <listViews>
        <fullName>My_Case_Team_Open_Cases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>Category__c</columns>
        <columns>Sub_Category__c</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CASES.LAST_UPDATE</columns>
        <columns>OWNER_NAME</columns>
        <filterScope>Team</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>My Case Team Open Cases</label>
        <sharedTo>
            <role>X2nd_Line_Support</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>My_Cases_with_Open_Actions</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>Category__c</columns>
        <columns>Sub_Category__c</columns>
        <columns>Open_Actions__c</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CASES.LAST_UPDATE</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Open_Actions__c</field>
            <operation>greaterThan</operation>
            <value>0</value>
        </filters>
        <label>My Cases with Open Actions</label>
    </listViews>
    <listViews>
        <fullName>My_cases_with_Overdue_Actions</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>Category__c</columns>
        <columns>Sub_Category__c</columns>
        <columns>Overdue_Action_Count__c</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CASES.LAST_UPDATE</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Overdue_Action_Count__c</field>
            <operation>greaterThan</operation>
            <value>0</value>
        </filters>
        <label>My cases with Overdue Actions</label>
    </listViews>
    <listViews>
        <fullName>Payment_Inquiries_Case</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>Category__c</columns>
        <columns>Sub_Category__c</columns>
        <columns>CASES.ORIGIN</columns>
        <filterScope>Queue</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>_Payment Inquiries</label>
        <queue>Payment_Inquiries</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Technical_Issues_Case</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>Category__c</columns>
        <columns>Sub_Category__c</columns>
        <columns>CASES.ORIGIN</columns>
        <filterScope>Queue</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>_Technical Issues</label>
        <queue>Technical_Issues</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <recordTypes>
        <fullName>Closed_Case</fullName>
        <active>true</active>
        <businessProcess>Closed Case Support Process</businessProcess>
        <label>Closed Case</label>
    </recordTypes>
    <recordTypes>
        <fullName>Community_Case</fullName>
        <active>true</active>
        <businessProcess>Case Support Process</businessProcess>
        <description>Record type for cases created from a community post</description>
        <label>Community Case</label>
    </recordTypes>
    <recordTypes>
        <fullName>Social_Case</fullName>
        <active>true</active>
        <businessProcess>Case Support Process</businessProcess>
        <description>Record type for cases created from a social channel (e.g. Twitter)</description>
        <label>Social Case</label>
    </recordTypes>
    <recordTypes>
        <fullName>Standard_Case</fullName>
        <active>true</active>
        <businessProcess>Case Support Process</businessProcess>
        <description>Record type for cases created from a web form or live chat</description>
        <label>Standard Case</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Can_not_reassign_case</fullName>
        <active>true</active>
        <description>triggers if a CSR tries to re-assign a case he did not work on</description>
        <errorConditionFormula>AND (
     ISPICKVAL( Status , &quot;In Progress&quot;), 
     ISCHANGED( OwnerId ),
     $User.ProfileId = &quot;00eg0000000DqLG&quot;
     )</errorConditionFormula>
        <errorMessage>You can not change the owner of a case you have not worked on</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Case_Subject_Description_read_only</fullName>
        <active>true</active>
        <description>Case Subject/Description are read only if the origin of the case is webform</description>
        <errorConditionFormula>AND( 
   OR( ISPICKVAL(Origin, &quot;Web form&quot;), 
       ISPICKVAL (Origin, &quot;Email&quot;)),
   OR ( ISCHANGED( Subject ),
        ISCHANGED( Description )  
       )
    )</errorConditionFormula>
        <errorMessage>You are not allowed to modify the case subject and/or description</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Close_Reason_Mandatory</fullName>
        <active>true</active>
        <description>this validation rule triggers if a case is closed without a case reason selected</description>
        <errorConditionFormula>AND
    (
      ISPICKVAL( Status , &quot;Closed&quot; ),
      ISPICKVAL(  Case_Close_Reason__c , &quot;&quot; ) 
     )</errorConditionFormula>
        <errorDisplayField>Case_Close_Reason__c</errorDisplayField>
        <errorMessage>Please select a close reason</errorMessage>
    </validationRules>
</CustomObject>